<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/pianokeybackground"
        android:background="@color/white"
        android:layout_width="330dp"
        android:layout_height="460dp"
        android:scaleType="fitXY"
        android:screenOrientation="portrait"
        android:src="@drawable/pianokeys_portrait" >
    </ImageView>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/pianoBkey"
        style="@style/pianokeysnormal"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="50dp"
        android:text="@string/B" />

    <Button
        android:id="@+id/pianoAsharpkey"
        style="@style/pianokeysharp"
        android:layout_marginTop="85dp"
        android:text="@string/Asharp" />
    
    <Button
        android:id="@+id/pianoAkey"
        style="@style/pianokeysnormal"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="108dp"
        android:text="@string/A" />
    
    <Button
        android:id="@+id/pianoGsharpkey"
        style="@style/pianokeysharp"
        android:layout_marginTop="150dp"
        android:text="@string/Gsharp" />
    
    <Button
        android:id="@+id/pianoGkey"
        style="@style/pianokeysnormal"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="168dp"
        android:text="@string/G" />
    
    <Button
        android:id="@+id/pianoFsharpkey"
        style="@style/pianokeysharp"
        android:layout_marginTop="215dp"
        android:text="@string/Fsharp" />
    
    <Button
        android:id="@+id/pianoFkey"
        style="@style/pianokeysnormal"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="225dp"
        android:text="@string/F" />
    
    <Button
        android:id="@+id/pianoEkey"
        style="@style/pianokeysnormal"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="283dp"
        android:text="@string/E" />
    
    <Button
        android:id="@+id/pianoDsharpkey"
        style="@style/pianokeysharp"
        android:layout_marginTop="320dp"
        android:text="@string/Dsharp" />
    
    <Button
        android:id="@+id/pianoDkey"
        style="@style/pianokeysnormal"
        android:layout_marginTop="343dp"
        android:layout_marginLeft="220dp"
        android:text="@string/D" />
    
    <Button
        android:id="@+id/pianoCsharpkey"
        style="@style/pianokeysharp"
        android:layout_marginTop="388dp"
        android:text="@string/Csharp" />
    
    <Button
        android:id="@+id/pianoCkey"
        style="@style/pianokeysnormal"
        android:layout_marginTop="402dp"
        android:layout_marginLeft="220dp"
        android:text="@string/C" />
</RelativeLayout>

</RelativeLayout>